monitoring/grafana/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.internal.crussell.io`)
      kind: Rule
      services:
        - name: grafana-service
          port: 3000
